--- a/TA_02.ipynb
+++ b/TA_02.ipynb
@@ -24,9 +24,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python 3.12.3' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
      ]
     }
    ],
@@ -44,9 +42,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python 3.12.3' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
      ]
     }
    ],
@@ -65,9 +61,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python 3.12.3' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
      ]
     }
    ],
@@ -86,9 +80,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python 3.12.3' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
      ]
     }
    ],
@@ -114,9 +106,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python 3.12.3' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
      ]
     }
    ],
